// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board the game before it's running renders the expected components 1`] = `
<div
  className="board"
>
  <div
    className="text"
  >
    <div
      className="Words"
    >
      <span
        className="Word"
      >
        <span
          className="black"
        >
          t
        </span>
        <span
          className="black"
        >
          h
        </span>
        <span
          className="black"
        >
          i
        </span>
        <span
          className="black"
        >
          s
        </span>
      </span>
      <span
        className="Word"
      >
        <span
          className="black"
        >
          i
        </span>
        <span
          className="black"
        >
          s
        </span>
      </span>
      <span
        className="Word"
      >
        <span
          className="black"
        >
          t
        </span>
        <span
          className="black"
        >
          e
        </span>
        <span
          className="black"
        >
          x
        </span>
        <span
          className="black"
        >
          t
        </span>
      </span>
    </div>
  </div>
  <div
    className="typing-box"
  >
    <div
      className="TypingBox"
    >
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="timer"
  />
  <div
    className="wordsperminute"
  />
</div>
`;

exports[`Board the game once it's running renders the expected components 1`] = `
<div
  className="board"
>
  <div
    className="text"
  >
    <div
      className="Words"
    >
      <span
        className="Word"
      >
        <span
          className="black"
        >
          t
        </span>
        <span
          className="black"
        >
          h
        </span>
        <span
          className="black"
        >
          i
        </span>
        <span
          className="black"
        >
          s
        </span>
      </span>
      <span
        className="Word"
      >
        <span
          className="black"
        >
          i
        </span>
        <span
          className="black"
        >
          s
        </span>
      </span>
      <span
        className="Word"
      >
        <span
          className="black"
        >
          t
        </span>
        <span
          className="black"
        >
          e
        </span>
        <span
          className="black"
        >
          x
        </span>
        <span
          className="black"
        >
          t
        </span>
      </span>
    </div>
  </div>
  <div
    className="typing-box"
  >
    <div
      className="TypingBox"
    >
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="timer"
  >
    <div>
      Timer: 
      0
    </div>
  </div>
  <div
    className="wordsperminute"
  />
</div>
`;

exports[`Board the game when it is finished renders the expected components 1`] = `
<div
  className="board"
>
  <div
    className="text"
  />
  <div
    className="typing-box"
  />
  <div
    className="timer"
  />
  <div
    className="wordsperminute"
  >
    <div
      className="wpm"
    >
      WPM: Infinity
    </div>
  </div>
</div>
`;
